# MicroUSC

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig  sdkconfig.old  sections.txt  symbols.txt
.ziptests/: CMakeLists.txt
.ziptests/include/: speed_test.h
.ziptests/src/: speed_test.c
Universal_Serial_Port/components/: LICENSE
Universal_Serial_Port/components/driver_connection/: CMakeLists.txt
Universal_Serial_Port/components/driver_connection/include/: esp_uart.h
Universal_Serial_Port/components/memory_storage/: CMakeLists.txt
components/MicroUSC/: CMakeLists.txt  idf_component.yml
components/MicroUSC/MicroUSC_Driver/: CMakeLists.txt  USCdriver.c  atomic_sys_op.c  esp_uart.c  idf_component.yml
components/MicroUSC/MicroUSC_Driver/include/: USCdriver.h  atomic_sys_op.h  esp_uart.h
components/MicroUSC/MicroUSC_Driver/include/MicroUSC/synced_driver/: USCdriver.h  atomic_sys_op.h  esp_uart.h
components/MicroUSC/MicroUSC_Kernel/: CMakeLists.txt  MicroUSC-internal.c  MicroUSC-kernel.c  idf_component.yml  kernel.c  memory_pool.c  status.c
components/MicroUSC/MicroUSC_Kernel/include/: MicroUSC-internal.h  MicroUSC-kernel.h  memory_pool.h  status.h
components/MicroUSC/MicroUSC_Kernel/include/MicroUSC/system/: MicroUSC-internal.h  kernel.h  memory_pool.h
components/MicroUSC/esp_chip/: CMakeLists.txt
components/MicroUSC/include/MicroUSC/: USCdriver.h  uscUniversal.h
components/MicroUSC/include/MicroUSC/chip_specific/: system_attr.h
components/MicroUSC/include/MicroUSC/esp_chip/: system_attr.h
components/MicroUSC/include/MicroUSC/synced_driver/: USCdriver.h  atomic_sys_op.h  esp_uart.h
components/MicroUSC/include/MicroUSC/system/: MicroUSC-internal.h  kernel.h  manager.h  manager_isr.h  memory_pool.h  rtc.h  sleep.h  status.h  uscsystemdef.h
components/MicroUSC/include/MicroUSC/wireless/: mqtt.h  wifi.h
components/MicroUSC/internal/: CMakeLists.txt  initStart.c
components/MicroUSC/internal/include/: USC_driver_config.h  initStart.h  uscdef.h
components/MicroUSC/internal/include/MicroUSC/internal/: USC_driver_config.h  uscdef.h
components/MicroUSC/internal_include/MicroUSC/internal/: USC_driver_config.h  binarytreestring.h  driverList.h  genList.h  hashmap.h  initStart.h  uscdef.h
components/MicroUSC/internal_include/MicroUSC/internal/system/: bit_manip.h  init.h  service_def.h  wireless_service.h
components/MicroUSC/internal_include/MicroUSC/internal/wireless/: mqtt.h  mqtt_handler.hpp  parsing.h  wifi.h  wifi_handler.hpp
components/MicroUSC/src/application/: USCdriver.c
components/MicroUSC/src/chip_specific/esp32/: builtin_led.S  system_attr.c
components/MicroUSC/src/chip_specific/esp32s3/: system_attr.c
components/MicroUSC/src/esp_chip/esp32/: system_attr.c
components/MicroUSC/src/esp_chip/esp32s3/: system_attr.c
components/MicroUSC/src/internal/: binarytreestring.c  driverList.c  genList.c  hashmap.c  initStart.c
components/MicroUSC/src/internal/system/: bit_manip.c  init.c
components/MicroUSC/src/internal/wireless/: mqtt_handler.cpp  wifi_handler.cpp
components/MicroUSC/src/synced_driver/: USCdriver.c  atomic_sys_op.c  esp_uart.c
components/MicroUSC/src/system/: MicroUSC-internal.c  kernel.c  manager.c  manager_isr.c  rtc.c  sleep.c  status.c  wireless_service.c
components/MicroUSC/src/wireless/: mqtt.c  mqtt.cpp  ota.c  parsing.c  wifi.c  wifi.cpp
components/debug/: CMakeLists.txt  idf_component.yml  logger.c
components/debug/debugging/: speed_test.h
components/debug/logging/: logger.h
components/driver_actions/src/: test_driver.c
components/driver_connection/: CMakeLists.txt  critical_cycle.S
components/driver_connection/include/: USC_driver.h  USC_driver_config.h  atomic_sys_op.h  critical_cycle.S  esp_uart.h
components/driver_connection/src/: USC_driver.c  atomic_sys_op.c  esp_uart.c
components/drivers/: CMakeLists.txt  idf_component.yml
components/drivers/src/: test_driver.c
components/examples/: CMakeLists.txt
components/examples/include/: testing_driver.h
components/examples/src/: testing_driver.c
components/general/: CMakeLists.txt  genList.c
components/memory_storage/include/: memory_pool.h  queue.h
components/memory_storage/src/: memory_pool.c  queue.c
components/serial_protocol/: CMakeLists.txt
components/serial_protocol/include/: testing_driver.h
components/serial_protocol/src/: function_data_tester.c  testing_driver.c
components/task_runtime/: CMakeLists.txt  generic.c  tiny_kernel.c
components/task_runtime/include/: generic.h  status.h  status_var.h  tiny_kernel.h
components/task_runtime/status/: status.c  status_var.c
docs/: index.md
docs/api/: MicroUSC.md  driver_management.md  memory_management.md  sleep.md  status.md
main/: CMakeLists.txt  idf_component.yml  main.c
vscode/: c_cpp_properties.json
